# band-heart-rate

./: .gitignore  Cargo.toml  README.md  README_EN.md  build.rs  tauri.conf.json  web-ui.html
.github/workflows/: build.yml  ci.yml  release.yml
capabilities/: default.json
frontend/: app.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json
icons/: create_icon.py  debug_icon.py
src/: ble.rs  gui.rs  macros.rs  main.rs  server.rs  types.rs  web_ui.rs
ui/: app.slint
