[package]
name = "miband-heart-rate"
authors = ["Roxy"]
version = "0.0.4"
edition = "2021"
repository = "https://github.com/Roxy-0304/miband-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
bluest = "0.6.8"
futures-lite = "1.13.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
