[package]
name = "band-heart-rate"
authors = ["Roxy"]
version = "26.5.1"
edition = "2021"
repository = "https://github.com/Roxy-0304/band-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
bluest = "0.6.8"
futures-lite = "1.13.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
